correct width item project with js because of scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ body.noscroll{overflow: hidden;}
 }
 .portfolio #list-projects > ul > li{
 	display: block;
-	width:100%;height:300px;
+	height:300px;
 	position:relative;
 
 	opacity: 0;
@@ -491,7 +491,7 @@ body.noscroll{overflow: hidden;}
 	transform: translateX(0);
 }
 .portfolio #list-projects > ul > li .project-background{
-	position:absolute;top:0;left:0;width:76%;height:100%;
+	position:absolute;top:0;left:0;width:100%;height:100%;
 	opacity:0;visibility:hidden;
 	-webkit-transition: all .7s ease;
   	transition: all .7s ease;
